# antv_jsonschema

./: .gitignore  README.md  pyproject.toml  requirements.txt
antv_jsonschema/resources/g2plot.antv.vision/: app-f35d1cb0b71e5f8ca207.js  polyfill-51f69e2a4a2c3d0d252f.js  webpack-runtime-23cb57ffac83d36ce5f6.js
antv_jsonschema/resources/g2plot.antv.vision/zh/docs/api/plots/: area.html  bar.html  bidirectional-bar.html  box.html  bullet.html  circle-packing.html  column.html  dual-axes.html  funnel.html  gauge.html  heatmap.html  histogram.html  line.html  liquid.html  pie.html  progress.html  radar.html  radial-bar.html  ring-progress.html  rose.html  sankey.html  scatter.html  stock.html  sunburst.html  tiny-area.html  tiny-column.html  tiny-line.html  treemap.html  venn.html  violin.html  waterfall.html  word-cloud.html
antv_jsonschema/scripts/: make_examples_jsonschema.py
var/tmp/schema/: area.json  bar.json  bidirectional-bar.json  box.json  bullet.json  circle-packing.json  column.json  dual-axes.json  funnel.json  gauge.json  histogram.json  line.json  liquid.json  pie.json  progress.json  radar.json  radial-bar.json  ring-progress.json  rose.json  stock.json  sunburst.json  tiny-area.json  tiny-column.json  treemap.json  venn.json  violin.json  waterfall.json  word-cloud.json
